# xmlppm

./: AUTHORS  ChangeLog  Makefile.in  README  TODO  config.h.in  config.h.meson  configure  configure.in  meson.build
src/: Args.cpp  Args.h  Coder.cpp  Coder.h  DecodeSax.cpp  DecodeSax.h  EncodeSax.cpp  EncodeSax.h  IFile.cpp  IFile.h  Makefile.am  Makefile.in  Model.cpp  Model.h  PPMdType.h  PrintSax.cpp  PrintSax.h  StringArray.cpp  StringArray.h  SubAlloc.hpp  Version.h  XmlModel.cpp  XmlModel.h  xmlppm.cpp  xmlunppm.cpp
subprojects/: .gitignore
